use a fixed revision of django-cms for the testserver

--- a/development_server.cfg
+++ b/development_server.cfg
@@ -1,9 +1,18 @@
 [buildout]
 extends=development.cfg
 parts +=
+	django-cms
 eggs +=
+eggs -=
+	django-cms
 develop +=
-	../external-src/django-cms-2.0
+
+[django-cms]
+recipe=zerokspot.recipe.git
+repository=git://github.com/digi604/django-cms-2.0.git
+#branch=master
+rev=6f78ed43f808e59685f7bd0b40e732578e83ecb8
+as_egg=True
 
 [django]
 wsgi=true
