fixed logfile path

--- a/development_server.cfg
+++ b/development_server.cfg
@@ -17,4 +17,4 @@ as_egg=True
 [django]
 wsgi=true
 settings=settings.development_server
-logfile=conf/log/django.wsgi.log
+logfile=/home/django/apps/djangocms-project/conf/log/django.wsgi.log
